<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"

        />

<!--<include layout="@layout/include_toolbar" />-->

    <RelativeLayout
        android:id="@+id/assets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"

        >




        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp2"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp40"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mnemion_sure"
                android:textSize="@dimen/dp18"
                android:textColor="@color/color_4E5D6E"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mnemion_sort"
                android:textSize="@dimen/dp16"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp20"
                android:textColor="@color/color_b5b5b5"

                />




            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wordslist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                android:layout_marginTop="@dimen/dp15"
                android:background="@color/color_ececec"
                android:minHeight="@dimen/dp100"

                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wordslist1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                android:layout_marginTop="20dp"
                />




        </LinearLayout>

        <Button
            android:id="@+id/clearAll"
            android:layout_width="@dimen/dp85"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/str_clear"
            android:layout_marginLeft="@dimen/dp140"
            android:layout_marginTop="@dimen/dp14"
            android:layout_below="@+id/root"
            />

    </RelativeLayout>





</RelativeLayout>
