<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <include layout="@layout/toolbar" />


<androidx.cardview.widget.CardView
    android:id="@+id/content_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/dp35"
    android:layout_marginLeft="@dimen/dp35"
    android:layout_below="@+id/appbar"
    android:layout_marginTop="@dimen/dp80"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"

        >

        <ImageView
            android:id="@+id/qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/dp40"
            android:layout_centerInParent="true"
            android:layout_below="@+id/appbar"

            />


        <TextView
            android:id="@+id/address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/qrcode"
            android:layout_marginTop="@dimen/dp25"
            android:layout_marginLeft="@dimen/dp25"
            android:layout_marginRight="@dimen/dp25"
            android:padding="@dimen/dp10"
            />

    </LinearLayout>




</androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp120"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp80"
        android:visibility="gone"
        >



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageButton
                android:layout_width="@dimen/dp45"
                android:layout_height="@dimen/dp45"
                android:layout_gravity="center"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_copy"
                android:id="@+id/copy"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_copy"
                android:textColor="@color/colorPrimary"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1"

            >
            <ImageButton
                android:layout_width="@dimen/dp45"
                android:layout_height="@dimen/dp45"
                android:src="@mipmap/ic_save"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:id="@+id/save"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_save"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"


                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:id="@+id/receiver"
            android:layout_weight="1"

            >

            <ImageButton
                android:layout_width="@dimen/dp45"
                android:layout_height="@dimen/dp45"
                android:layout_gravity="center"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_share"
                android:layout_weight="1"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_share"
                android:textColor="@color/colorPrimary"

                />

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
